# swarmclaw

./: .gitignore  Cargo.toml  LICENSE  README.md  direct_test.sh
.swarmclaw/: google_workspace.key  google_workspace.sqlite  sessions.sqlite
docs/: FLEET_STRATEGY.md  MINION_INTERFACE.md  WASM_SKILLS_STRATEGY.md  WASM_ZERO_COPY.md  WHAT_IS_SWARMCLAW.md
docs/swarmclaw/: FLEET_INTEGRATION.md  INTERFACES.md  STUB_RETRIEVAL.md  WASM_PLUGINS.md  WASM_SKILLS_ROADMAP.md
scripts/: README.md  tui_smoke.py
skills/: skill_google_docs.cwasm.bak  skill_google_docs.wasm.bak  skill_google_sheets.cwasm.bak  skill_google_sheets.wasm.bak
skills-library/fetch-convert/: Cargo.toml  README.md
skills-library/fetch-convert/src/: lib.rs
skills-library/filesystem/: Cargo.toml
skills-library/filesystem/src/: lib.rs
skills-library/google-docs/: Cargo.toml  README.md
skills-library/google-docs/src/: lib.rs
skills-library/google-gmail/: Cargo.toml  README.md
skills-library/google-gmail/src/: lib.rs
skills-library/google-sheets/: Cargo.toml  README.md
skills-library/google-sheets/src/: lib.rs
skills-library/search-web/: Cargo.toml  README.md
skills-library/search-web/src/: lib.rs
skills-library/shell/: Cargo.toml
skills-library/shell/src/: lib.rs
swarmclaw/: .env.example  Cargo.toml  Cargo.toml.bak  Dockerfile  README.md  SECRETS_ARCHITECTURE.md  build.rs  mothership.yaml  patch.diff  swarmclaw_local.db
swarmclaw-sdk/: Cargo.toml
swarmclaw-sdk/src/: lib.rs
swarmclaw/.swarmclaw/: analytics.jsonl  google_workspace.key  google_workspace.sqlite  sessions.sqlite
swarmclaw/examples/: chrome_cmd.rs  test_browsers.rs  test_scroll.rs
swarmclaw/schemas/: agent.fbs  plugin.fbs
swarmclaw/src/: agent_generated.rs  cli.rs  cloud_storage.rs  lib.rs  main.rs  main.rs.bak  outbox.rs  plugin_generated.rs  safety.rs  tui.rs  worker.rs
swarmclaw/src/config/: loader.rs  mod.rs
swarmclaw/src/core/: agent.rs  agent.rs.bak  context.rs  delegation.rs  loop_guard.rs  mod.rs  pipeline.rs  session_store.rs  skill_memory.rs  state.rs
swarmclaw/src/fleet/: mod.rs
swarmclaw/src/gateways/: clawnet.rs  common.rs  discord.rs  mod.rs  slack.rs  telegram.rs  test_support.rs  webrtc_signaling.rs  whatsapp.rs
swarmclaw/src/llm/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
swarmclaw/src/secrets/: mod.rs
swarmclaw/src/security/: mod.rs  redactor.rs
swarmclaw/src/services/: admin_api.rs  browser.rs  control_plane_store.rs  cron.rs  google_workspace.rs  google_workspace_store.rs  memory.rs  mod.rs  model_fetcher.rs  web_tools.rs
swarmclaw/src/skills/: analytics.rs  browser.rs  clawhub.rs  config.rs  desktop.rs  firefox.rs  fleet.rs  fs.rs  interaction.rs  mcp.rs  media.rs  memory.rs  mod.rs  shell.rs  wasm.rs
swarmclaw/src/tools/: delegate.rs  mod.rs
swarmclaw/tests/: shell_test.rs
