[workspace]
members = [
    "swarmclaw",
    "swarmclaw-sdk",
    "skills-library/fetch-convert",
    "skills-library/filesystem",
    "skills-library/google-docs",
    "skills-library/google-gmail",
    "skills-library/google-sheets",
    "skills-library/search-web",
    "skills-library/shell",
]
resolver = "2"
