[package]
name = "swarmclaw-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building Zero-Copy FlatBuffers WASM skills for HuggingPlace SwarmClaw"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
flatbuffers = "25.12.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
