[package]
name = "swarmclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
flatbuffers = "25.12.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_urlencoded = "0.7"

# CLI & Logging
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Networking
reqwest = { version = "0.11", features = ["blocking", "json", "stream", "multipart"] }

# Utils
anyhow = "1.0"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
dotenv = "0.15.0"
wasmtime = "41.0.3"
wasi-common = "41.0.3"
aes-gcm = "0.10.3"
headless_chrome = { version = "1.0.21", optional = true }
image = { version = "0.25.9", optional = true }
ort = { version = "2.0.0-rc.11", features = ["download-binaries"], optional = true }
lance = { version = "2.0.1", optional = true }
sea-orm = { version = "0.12.0", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
axum = "0.8.8"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.9"
sha1 = "0.10.6"
base64 = "0.22.1"
object_store = { version = "0.13.1", features = ["aws", "gcp", "azure"] }
bytes = "1.11.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
once_cell = "1.21.3"
webrtc = "0.17.1"
regex = "1.11"
mothership-media = { path = "../../mothership-media", optional = true }
rustyline = "17.0.2"
colored = "3.1.1"
reqwest-eventsource = "0.5.0"
eventsource-stream = "0.2.3"
crossterm = "0.29.0"
urlencoding = "2.1.3"
scraper = "0.24.0"
html2text = "0.16.4"

# Workspace internal dependencies (optional for now)
# mothership-common = { path = "../mothership-common" }
# mothership-conn = { path = "../mothership-conn" }

[[bin]]
name = "swarmclaw"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[features]
serenity = []
teloxide = []
headless_chrome = ["dep:headless_chrome"]
image = ["dep:image", "dep:mothership-media"]
ort = ["dep:ort"]
lance = ["dep:lance"]

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
